# ansible-playbook-template

./: .envrc  .gitattributes  .gitignore  LICENSE  README.md  ansible.cfg  example-playbook.yml  pyproject.toml
collections/: requirements.yml
group_vars/: README.md
host_vars/: README.md
plugins/: README.md
roles/: README.md
