[project]
name = "ansible-playbook"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ansible-core==2.19.5",
    "argcomplete>=3.6,<4",
    "cryptography>=46,<47",
    "dnspython>=2.8,<3",
    "fqdn>=1.5.1,<2",
    "jmespath>=1.0.1,<2",
    "netaddr>=1.3,<2",
    "paramiko>=4,<5",
    "pymysql>=1.1.2,<2",
    "requests>=2.32.5,<3",
    "rich>=14,<15",
]

[dependency-groups]
dev = [
    "ansible-lint>=26.1.1",
    "yamllint>=1.38.0",
]

# vim: ft=toml ts=4 sts=2 sw=2 nosr et
